[tapocontrol] code reviews
Signed-off-by: Christian Wild <christian@wildclan.de>